--- a/default_config.yaml
+++ b/default_config.yaml
@@ -14,7 +14,7 @@ sigma: 2
 num_parallel_workers: 4
 
 # Device configuration
-device_target: GPU
+device_target: Ascend
 device_num: 1
 rank_id: 0
 device_id: 0
