--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 mindspore==1.8.1
+mindspore_ascend==1.7.0
 numpy==1.21.6
 Pillow==9.2.0
 PyYAML==6.0
-scikit_image==0.19.3
-scikit-image
+scikit_image==0.17.2
+skimage==0.0
 torch==1.8.1
